--- a/server/config/.env
+++ b/server/config/.env
@@ -1,5 +1,5 @@
 PORT = 9000
-DB_URL = mongodb://localhost:27017
+DB_URL = mongodb://localhost:27017/ecom
 JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
 JWT_EXPIRES = 7d
 ACTIVATION_SECRET ="Hellogoodmorning"
